--- a/index.html
+++ b/index.html
@@ -5,61 +5,60 @@
 \paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
 \pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-    <meta charset="UTF-8">\
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <title>Your Name | Personal Website</title>\
-    <link rel="stylesheet" href="style.css">\
-</head>\
-<body>\
-    <header>\
-        <h1>Your Name</h1>\
-        <p>Welcome to my personal website! Explore my projects, skills, and how to reach me.</p>\
-    </header>\
-\
-    <section id="about">\
-        <h2>About Me</h2>\
-        <p>I'm a [profession or passion] who loves [interests]. Here\'92s a little about my journey and what drives me.</p>\
-    </section>\
-\
-    <section id="skills">\
-        <h2>Skills</h2>\
-        <ul>\
-            <li>Skill 1</li>\
-            <li>Skill 2</li>\
-            <li>Skill 3</li>\
-        </ul>\
-    </section>\
-\
-    <section id="projects">\
-        <h2>Projects</h2>\
-        <div class="project">\
-            <h3>Project 1</h3>\
-            <p>Brief description of what the project is and your role in it.</p>\
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>\
-        </div>\
-        <div class="project">\
-            <h3>Project 2</h3>\
-            <p>Brief description of another project.</p>\
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>\
-        </div>\
-    </section>\
-\
-    <section id="contact">\
-        <h2>Contact</h2>\
-        <p>Feel free to reach out through any of the channels below:</p>\
-        <ul>\
-            <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>\
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/yourusername" target="_blank">Your LinkedIn</a></li>\
-            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub</a></li>\
-        </ul>\
-    </section>\
-\
-    <footer>\
-        <p>\'a9 Your Name | Made with \uc0\u10084  for the web</p>\
-    </footer>\
-</body>\
-</html>\
-}
+\f0\fs24 \cf0 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siqi Lyu | Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Siqi Lyu </h1>
+        <p>Welcome to my personal website! Explore my projects, skills, and how to reach me.</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a Computer Engineering student at McGill University. Here’s a little about my journey and what drives me.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Skill 1</li>
+            <li>Skill 2</li>
+            <li>Skill 3</li>
+        </ul>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Brief description of what the project is and your role in it.</p>
+            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Brief description of another project.</p>
+            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out through any of the channels below:</p>
+        <ul>
+            <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/yourusername" target="_blank">Your LinkedIn</a></li>
+            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© Siqi Lyu | Made with ❤ for the web</p>
+    </footer>
+</body>
+</html>
